// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cause is a empty object 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

    [31m✖[39m Error message

"
`;

exports[`component info and index are present 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

  Kind: v1/Pod, Name: foo, Index: [2, 4]
    [31m✖[39m Error message

"
`;

exports[`component info contains namespace 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

  Kind: v1/Pod, Name: default/foo
    [31m✖[39m Error message

"
`;

exports[`cwd is not empty 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

    [31m✖[39m Error message

[1m/abc/def/components/bar.ts[22m - [31m✖ 1[39m

    [31m✖[39m Error message

"
`;

exports[`ignore manifests without issues 1`] = `
"
[1mcomponents/bar.ts[22m - [31m✖ 1[39m

    [31m✖[39m Error message

"
`;

exports[`index is not empty 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

  Index: [2, 4]
    [31m✖[39m Error message

"
`;

exports[`issue contains a Error class cause 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

    [31m✖[39m Error message
[90m      Error: foobar
        at foo.ts:1:1[39m

"
`;

exports[`issue contains a string cause 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

    [31m✖[39m Error message
[90m      Error: Cause message[39m

"
`;

exports[`issue contains an object cause 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

    [31m✖[39m Error message
[90m      FooError: foobar[39m

"
`;

exports[`manifest contains component info 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

  Kind: v1/Pod, Name: foo
    [31m✖[39m Error message

"
`;

exports[`multiple issues 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 2[39m [33m⚠ 1[39m

    [31m✖[39m Error 1
    [33m⚠[39m Warning 1
    [31m✖[39m Error 2

[1mcomponents/bar.ts[22m - [31m✖ 1[39m

    [31m✖[39m Error 3

"
`;

exports[`single error issue 1`] = `
"
[1mcomponents/foo.ts[22m - [31m✖ 1[39m

    [31m✖[39m Error message

"
`;

exports[`single warning issue 1`] = `
"
[1mcomponents/foo.ts[22m - [33m⚠ 1[39m

    [33m⚠[39m Warning message

[33mwarn [39m - Generate completed with warnings (Total [33m⚠ 1[39m)
"
`;
